--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
       <h5 class="b">NO</h5>
 
       <img class="pizza circular" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/pizza_1f355.png" alt="heart-img">
-      <img class="broccoli circular"src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/broccoli_1f966.png" alt="broccoli-img"><br>
+      <img class="broccoli circular"src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/broccoli_1f966.png" alt="broccoli-img">
+      <img class="fish circular"src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/fish_1f41f.png" alt="fish-img">
+      <img class="rice circular"src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/rice-ball_1f359.png" alt="rice-img">
+      <img class="chicken circular"src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/chicken_1f414.png" alt="chicken-img"><br>
     <a href="contact me.html">contact me</a>
   </body>
 </html>
